# fontconfig

./: config.h.cmake
src/: CMakeLists.txt  fcatomic.c  fccache.c  fccompat.c  fcfreetype.c  fcint.h  fcwindows.h  makealias  makefcobjshash.pl
src/win/: dirent.c  dirent.h
